<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.codemaicon.agendacontato.ActCadContatos">

    <LinearLayout
        android:id="@+id/lnlCampoNome"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:text="@string/lblNome"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <ImageView
            android:id="@+id/foto"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="270dp"
            android:onClick="verImagem"
            android:layout_weight="0"
            android:background="@mipmap/ic_launcher"
            app:srcCompat="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlCampoEmail"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editText16"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/lblEmail"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="267dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <Spinner
                android:id="@+id/spnTipoEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlCampoEndereco"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editText17"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:ems="10"

            android:text="@string/lblEndereco"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtEndereco"
                android:layout_width="267dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/spnTipoEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlCampoDatas"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical">

        <TextView

            android:id="@+id/editText18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:text="@string/lbl_datas_especiais"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtDatasEspeciais"
                android:layout_width="268dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <Spinner
                android:id="@+id/spnDatasEspeciais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlCampoTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editText15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:text="@string/lblTelefone"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:ignore="DuplicateIds" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtTelefone"
                android:layout_width="529dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone" />

            <Spinner
                android:id="@+id/spnTipoTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlGrupos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblGrupos"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/edtGrupos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

</LinearLayout>
